--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -15,3 +15,16 @@
   <p class="para five">Number 5 - I'm a class!</p>
 </body>
 </html>
+
+
+<!-- My version
+  
+<body>
+  <p >Number 1 - I'm a class!</p>
+  <div id="id-2">Number 2 - I'm one ID.</div>
+  <p class="class-3">Number 3 - I'm a class, but cooler!</p>
+  <div id="id-4">Number 4 - I'm another ID.</div>
+  <p class="class-5">Number 5 - I'm a class!</p>
+</body>
+
+-->
